2005-05-06  John Luke  <john.luke@gmail.com>

	* pango/Makefile.am: add Matrix.custom
	* pango/Matrix.custom: add Pango.Matrix.Identity field
	which is the equivalent of PANGO_MATRIX_INIT
	* sample/GtkDemo/DemoRotatedText.cs: use Pango.Matrix.Identity
	* doc/en/Pango/Matrix.xml: add docs	for Pango.Matrix.Identity
										
2005-05-06  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : always enable debug build in maintainer_mode.

2005-05-06  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom : move the GetCallingAssembly invocations back out
	the the public methods.
	* gdk/PixbufLoader.custom : ditto.

2005-05-06  Mike Kestner  <mkestner@novell.com>

	* bootstrap :
	* bootstrap-2.4 : use ln instead of cp for api files so reparsing
	causes rebuilds.
	* sources/gtk-sharp-2.6-sources.xml : moved from gtk-sharp-sources.xml
	plus fixed the pango, atk, and gdk raw filenames.
	* sources/gtk-sharp-2.4-sources.xml : sources file for 2.4 api.
	* sources/Makefile.am : added 2.4/2.6 targets for api and get-source
	with make api/get-source-code getting/parsing both versions.
	* */*.raw : regenerate

2005-05-06  Jose Faria  <spigaz@gmail.com>

	* gdk/Pixbuf.custom : new width/height ctor overloads.
	* gdk/PixbufLoader.custom : new width/height ctor overloads.

2005-05-04  Mike Kestner  <mkestner@novell.com>

	* autogen.sh : error out with bootstrap help message.
	* bootstrap : replaces autogen.sh for the 2.5.x release line.
	* bootstrap-2.4 : replaces autogen.sh for the 1.9.x release line.
	* configure.in.in : renamed from configure.in and added substitution
	for version, dependencies, CFLAGS and CSFLAGS.
	* README : bootstrap docs
	* */*-api.raw : moved to api-2.6.raw for bootstrapping.
	* */*-api-2.4.raw : added 2.4 api files for bootstrapping.
	* */glue/Makefile.am : add GTK_SHARP_VERSION_CFLAGS.
	* pango/Attribute.cs : add a #if GTK_SHARP_2_6 block.
	* pango/glue/attribute.c : add a couple #ifdef GTK_SHARP_2_6 blocks.