@@ -1,3 +1,8 @@
+2005-05-09  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Object.cs : add a try/catch block to g_object_unref calls to
+	help identify "extra unref" bugs when exceptions occur.
+
 2005-05-06  John Luke  <john.luke@gmail.com>
 
 	* pango/Makefile.am: add Matrix.custom
